--- a/index.html
+++ b/index.html
@@ -81,6 +81,63 @@
       <button onclick="increasetrend('trend3')">+</button><br>
       <button onclick="clearResulttrend('trend3')" class="reset-button">RESET</button><br>
     </div>    
+
+    <div id="counter4">
+      <input type="text" id="trendadi4" name="trendadi4" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend4')">-</button>
+      <input class="input-number" id="trend4" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend4')">+</button><br>
+      <button onclick="clearResulttrend('trend4')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter5">
+      <input type="text" id="trendadi5" name="trendadi5" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend5')">-</button>
+      <input class="input-number" id="trend5" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend5')">+</button><br>
+      <button onclick="clearResulttrend('trend5')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter6">
+      <input type="text" id="trendadi6" name="trendadi6" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend6')">-</button>
+      <input class="input-number" id="trend6" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend6')">+</button><br>
+      <button onclick="clearResulttrend('trend6')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter7">
+      <input type="text" id="trendadi7" name="trendadi7" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend7')">-</button>
+      <input class="input-number" id="trend7" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend7')">+</button><br>
+      <button onclick="clearResulttrend('trend7')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter8">
+      <input type="text" id="trendadi8" name="trendadi8" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend8')">-</button>
+      <input class="input-number" id="trend8" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend8')">+</button><br>
+      <button onclick="clearResulttrend('trend8')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter9">
+      <input type="text" id="trendadi9" name="trendadi9" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend9')">-</button>
+      <input class="input-number" id="trend9" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend9')">+</button><br>
+      <button onclick="clearResulttrend('trend9')" class="reset-button">RESET</button><br>
+    </div>
+
+    <div id="counter10">
+      <input type="text" id="trendadi10" name="trendadi10" value="TREND&KUMAŞ" class="input-number"><br>
+      <button onclick="decreasetrend('trend10')">-</button>
+      <input class="input-number" id="trend10" type="number" value="0" min="0" max="10000">
+      <button onclick="increasetrend('trend10')">+</button><br>
+      <button onclick="clearResulttrend('trend10')" class="reset-button">RESET</button><br>
+    </div>
+    
     
     <p width="188" height="13" style="color:black;">Developed by Mehmet TÜRKMEN</p>
     <a href="https://www.linkedin.com/in/mehmet-t%C3%BCrkmen1/" class="fa fa-linkedin"></a>
