--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
     <!-- Repeat this block for each counter -->
     <div id="counter1">
       <input type="text" id="trendadi1" name="trendadi1" value="TREND&KUMAŞ" class="input-number"><br>
-      <button onclick="decreasetrend('trend1')">-</button><br>
+      <button onclick="decreasetrend('trend1')">-</button>
       <input class="input-number" id="trend1" type="number" value="0" min="0" max="10000">
-      <button onclick="increasetrend('trend1')">+</button>
-      <button onclick="clearResulttrend('trend1')" class="reset-button">RESET</button>
+      <button onclick="increasetrend('trend1')">+</button><br>
+      <button onclick="clearResulttrend('trend1')" class="reset-button">RESET</button><br>
     </div>
     <!-- Duplicate the above block for counters 2 to 10, updating IDs accordingly -->
     <!-- Repeat above block for trend2, trend3, ..., trend10 -->
